--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.1.1",
     "date-fns": "^2.18.0",
-    "next": "10.0.6",
+    "next": "^10.2.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "styled-jsx": "^3.4.2"
@@ -26,7 +26,7 @@
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^10.0.6",
     "@svgr/webpack": "^5.5.0",
-    "@tailwindcss/jit": "^0.1.18",
+    "@tailwindcss/jit": "^0.1.10",
     "@types/mdx-js__react": "^1.5.3",
     "@types/node": "^14.14.25",
     "@types/react": "^17.0.1",
