--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^1.1.1",
     "date-fns": "^2.18.0",
     "next": "^10.2.3",
+    "next-images": "^1.8.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "remark-gfm": "^1.0.0",
