--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@headlessui/react": "^1.7.18",
     "@mdx-js/react": "^1.6.22",
     "clsx": "^1.1.1",
     "date-fns": "^2.18.0",
-    "next": "^10.2.3",
+    "next": "^11.1.4",
     "next-images": "^1.8.4",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "remark-gfm": "^1.0.0",
     "styled-jsx": "^3.4.2"
   },
