--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ostem-conference-site",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev-temp-patch": "powershell -c $env:NODE_OPTIONS='--openssl-legacy-provider'; next dev",
@@ -16,19 +16,17 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@headlessui/react": "^1.7.18",
-    "@mdx-js/react": "^1.6.22",
     "clsx": "^1.1.1",
     "date-fns": "^2.18.0",
-    "next": "^11.1.4",
+    "next": "^12.3.4",
     "next-images": "^1.8.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "remark-gfm": "^1.0.0",
-    "styled-jsx": "^3.4.2"
+    "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
     "@mdx-js/loader": "^1.6.22",
-    "@next/mdx": "^10.0.6",
+    "@next/mdx": "^12.3.4",
     "@svgr/webpack": "^5.5.0",
     "@tailwindcss/jit": "^0.1.10",
     "@types/mdx-js__react": "^1.5.3",
@@ -44,7 +42,7 @@
     "postcss": "^8.2.12",
     "prettier": "^2.2.1",
     "tailwindcss": "^2.1.1",
-    "typescript": "^4.1.5"
+    "typescript": "^4.9.5"
   },
   "lint-staged": {
     "./src/**/*.{js,jsx,ts,tsx}": [
